--- a/views/index.pug
+++ b/views/index.pug
@@ -6,4 +6,6 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         title Document
     body
-    
+        include layouts/nav
+        include layouts/footer
+        
